# gr-mlir-aie

./: .gitignore  README.md
aie-kernel-src/: Makefile  README  aie_kernel_utils.h  passthrough_pykernel.py
aie-kernel-src/cpp_bfloat16/: Makefile  aie2.py  aie2_memtile_cacheing.py  aie2_memtile_caching.py
aie-kernel-src/cpp_bfloat16_chesscc/: Makefile  aie2.py  aie2_memtile_caching.py  scale.cc
aie-kernel-src/cpp_bfloat16_counter_source_chesscc/: Makefile  aie2.py  counter.cc
aie-kernel-src/cpp_cbfloat16_arg_approx_chesscc/: Makefile  arg.cc
aie-kernel-src/cpp_cbfloat16_arg_chesscc/: Makefile  aie2.py  arg.cc
aie-kernel-src/cpp_cbfloat16_arg_math_chesscc/: Makefile  aie2.py  arg.cc  (+2 more)
gr-mlir_aie/: CMakeLists.txt  MANIFEST.md
gr-mlir_aie/python/mlir_aie/bindings/: CMakeLists.txt  bfloat16_to_float32_python.cc  cbfloat_to_complex64_python.cc  complex64_to_cbfloat_python.cc  float32_to_bfloat16_python.cc  mlir_aie_cpp_80211_magsq_and_div_python.cc  mlir_aie_cpp_bfloat16_python.cc  mlir_aie_cpp_int16_python.cc  mlir_aie_cpp_int32_python.cc  mlir_aie_cpp_int32_source_1arg_python.cc  mlir_aie_cpp_tagged_int32_to_int32_python.cc  mlir_aie_cpp_uint8_python.cc  mlire_aie_cpp_int32_to_int16_python.cc  python_bindings.cc
gr-mlir_aie/python/mlir_aie/bindings/docstrings/: bfloat16_to_float32_pydoc_template.h  cbfloat_to_complex64_pydoc_template.h  complex64_to_cbfloat_pydoc_template.h  float32_to_bfloat16_pydoc_template.h  mlir_aie_cpp_80211_magsq_and_div_pydoc_template.h  mlir_aie_cpp_bfloat16_pydoc_template.h  mlir_aie_cpp_int16_pydoc_template.h  mlir_aie_cpp_int32_pydoc_template.h  mlir_aie_cpp_int32_source_1arg_pydoc_template.h  mlir_aie_cpp_tagged_int32_to_int32_pydoc_template.h  mlir_aie_cpp_uint8_pydoc_template.h  mlire_aie_cpp_int32_to_int16_pydoc_template.h
grc-only/: embedded_python_v2.grc
(+105 files in other folders)
